[tool.poetry]
name = "dqp"
version = "0.0.1"
description = "Cache iterators to disk"
authors = ["Bram Neijt <bram@neijt.nl>"]
readme = "README.md"
repository = "https://github.com/bneijt/dqp"
classifiers = ["Intended Audience :: Developers"]

[tool.poetry.dependencies]
python = "^3.9"
msgpack = "^1.0.7"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pytest = "^7.4.3"
twine = "^4.0.2"
pre-commit = "^3.6.0"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["I"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
